# homestay-management

./: .env.example  .gitignore  AGENTS.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl
.beads/.br_history/: issues.20260301_230742.jsonl  issues.20260628_082604_426691844.jsonl  issues.20260628_082604_643843383.jsonl  issues.20260628_082604_783986374.jsonl  issues.20260628_082604_967895170.jsonl  issues.20260628_082605_143300993.jsonl  issues.20260628_082605_283196604.jsonl  issues.20260628_082605_451723839.jsonl  issues.20260628_082605_597680376.jsonl  issues.20260628_082605_728286733.jsonl  issues.20260628_082605_915510567.jsonl  issues.20260628_082618_362956996.jsonl  issues.20260628_082618_475030619.jsonl  issues.20260628_082618_589098412.jsonl  issues.20260628_082618_698522305.jsonl  issues.20260628_082618_811236069.jsonl  issues.20260628_082618_923631871.jsonl  issues.20260628_082619_073978948.jsonl  issues.20260628_082619_199589780.jsonl  (+69 more)
alembic/: env.py
app/: __init__.py  config.py  database.py  exceptions.py  main.py
frontend/: Dockerfile  package-lock.json  package.json
mcp_server/: __init__.py  server.py
scripts/: seed_admin.py  seed_data.py  seed_rooms.py
tests/: __init__.py  conftest.py  test_additional_fees.py  test_agent.py  test_api_availability.py  test_api_bookings.py  test_api_media.py  test_api_rooms.py  test_auth.py  test_availability_service.py  test_booking_service.py  test_guest_search.py  test_health.py  test_mcp_tools.py  test_media_service.py  test_models.py  test_room_service.py  test_schemas.py
(+79 files in other folders)
